--- a/src/components/projects/projectdata.json
+++ b/src/components/projects/projectdata.json
@@ -41,10 +41,10 @@
     },
     {
         "id": 6,
-        "image": "https://user-images.githubusercontent.com/80665978/133908098-cc77f905-56a1-4f0b-9bc0-4cb36b0fc0c3.png",
+        "image": "https://raw.githubusercontent.com/Claholla/react-portfolio/main/src/components/images/e-commerce-backend-screenshot.png",
         "title": "E-Commerce Back End",
         "application": "https://drive.google.com/file/d/1Gh65XkyBO7pfowMEOFoO9hLOQtEdDOm3/view",
         "github": "https://github.com/Claholla/e-commerce-back-end",
-        "technologies": "JavaScript / MongoDB / Mongoose / IndexedDB / Express"
+        "technologies": "JavaScript / MySQL / Sequelize / Express"
     }
 ]
